# samdul12food

./: .firebaserc  Dockerfile  README.md  pyproject.toml
.firebase/: hosting.cHVibGlj.cache
public/: index.html
src/samdul12food/: main.py
